# daala

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  COPYING  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac  daala-uninstalled.pc.in  daala.pc.in  daaladec-uninstalled.pc.in  daaladec.pc.in  daalaenc-uninstalled.pc.in  daalaenc.pc.in  update_version
ci/: autotools.sh  clang-asan.sh  clang-ioc.sh  clang.sh  coverage.sh  fetch-videos.sh  lossless.sh  scan-build.sh  unix.sh
doc/: .gitignore  16x32.nb  4-8sub.fig  4x8.nb  8x16.nb  Doxyfile.in  Makefile  Makefile.am  blockidx.fig  coding_style.html  crf_across.eps  crf_across.odg  crf_def.eps  crf_def.odg  crf_direction.eps  crf_direction.odg  crf_linear.eps  crf_noisy.eps  crf_orig.eps  crf_out.eps  daala.bib  design.tex  dir_dering.lyx  dist_vs_K.eps  dlines.eps  dlines.fig  fetch_imgs.sh  interp.fig  intra_paint.lyx  intra_prob.lyx  mc-edge-label-stats.nb  mc-interpolation.nb  mc.tex  mvpred.fig  noise-shape.nb  pvq_encoding.lyx  rdo_transform.lyx  search.txt  theoretical_results.lyx  vbunsplit.fig  (+1 more)
doc/ietf/: draft-egge-netvc-cfl.xml  draft-egge-netvc-tdlt.xml  draft-egge-videocodec-tdlt.xml  draft-maxwell-videocodec-requirements.xml  draft-terriberry-codingtools.xml  draft-terriberry-netvc-codingtools.xml  draft-terriberry-netvc-obmc.xml  draft-valin-netvc-deringing.xml  draft-valin-netvc-l1tw.xml  draft-valin-netvc-pvq.xml  draft-valin-videocodec-pvq.xml
examples/: Makefile.am  analyzer.cc  dump_video.c  encoder_example.c  player_example.c
include/: Makefile.am
include/daala/: codec.h  daala_integer.h  daaladec.h  daalaenc.h
m4/: pkg.m4  wxwin.m4
src/: Makefile.am  accounting.c  accounting.h  adapt.c  adapt.h  block_size.c  block_size.h  block_size_dec.c  block_size_dec.h  block_size_enc.c  block_size_enc.h  cdf_table.c  dct.c  dct.h  decint.h  decode.c  dering.c  dering.h  ec_test.c  ecintrin.h  encint.h  encode.c  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  filter.c  filter.h  gen_cdf.c  gen_icdf.c  generic_code.c  generic_code.h  generic_decoder.c  generic_encoder.c  icdf_table.c  info.c  infodec.c  infoenc.c  (+62 more)
src/arm/: armdct.c  armint.h  armstate.c  cpu.c  cpu.h
src/tests/: Makefile.am  check_initial.c  check_main.c  ectest.c  headerencode_test.c  logging_test.c  test_32x32.c  test_coef_coder.c  test_divu_small.c  test_filters.c
src/x86/: avx2dct.c  cpu.c  cpu.h  sse2dct.c  sse2dering.c  sse2filter.c  sse2mc.c  sse2mcenc.c  sse2util.c  sse41dct.c  x86dct.h  x86enc.c  x86enc.h  x86filter.c  x86int.h  x86mcenc.c  x86state.c  x86util.c
tools/: Makefile  Makefile.am  ab_compare.sh  ab_compare_daala.sh  ab_compare_jpeg.sh  ab_compare_libvpx.sh  ab_compare_x264.sh  ab_compare_x265.sh  ab_meta_compare.sh  bd_rate.sh  bjontegaard.c  block_size_analysis.c  cfl_stats.c  cfl_stats.m  check_lossless.sh  cholesky.c  cholesky.h  collect_mvf_ec.sh  compute_basis.c  compute_haar_basis.c  cos_search.c  daalainfo.c  data_compactor.c  divu_const.c  downsample.c  draw_zigzags.c  dump_ciede2000.py  dump_fastssim.c  dump_msssim.c  dump_psnr.c  dump_psnrhvs.c  dump_ssim.c  ec_test.c  gen_cdf.c  gen_dct_template.c  gen_filter_tables.c  gen_laplace_tables.c  gen_sqrt_tbl.c  gen_zigzag16.m  gen_zigzag32.m  (+87 more)
tools/comparison-setup/: footer.html  header.html  make_testcase.sh  sort_results.sh
tools/java/: build.xml
tools/java/etc/: build.properties
tools/java/src/intra/: Intra.java  Intra2.java
tools/matlab/: bd_rate.m  bjontegaard.m  sparsify.m
tools/unix/: Makefile
unix/: Makefile
webtools/: metrics.html
webtools/js/: jquery.flot.js
win32/: ReadMe.txt
win32/Dependencies/: strings.c  strings.h
win32/Visual Studio/VS2008/: Daala_static.sln
win32/Visual Studio/VS2008/LibDaalaBase/: LibDaalaBase.vcproj
win32/Visual Studio/VS2008/decoder_example/: decoder_example.vcproj
win32/Visual Studio/VS2008/example_encoder/: example_encoder.vcproj
win32/Visual Studio/VS2008/libdaaladec/: libdaaladec.vcproj
win32/Visual Studio/VS2008/libdaalaenc/: libdaalaenc.vcproj
win32/Visual Studio/VS2010/: Daala_static.sln
win32/Visual Studio/VS2010/LibDaalaBase/: LibDaalaBase.vcxproj  LibDaalaBase.vcxproj.filters  ReadMe.txt
win32/Visual Studio/VS2010/analyser/: analyser.vcxproj  analyser.vcxproj.filters
win32/Visual Studio/VS2010/decoder_example/: decoder_example.vcxproj  decoder_example.vcxproj.filters
win32/Visual Studio/VS2010/example_encoder/: example_encoder.vcxproj  example_encoder.vcxproj.filters
win32/Visual Studio/VS2010/libdaaladec/: ReadMe.txt  libdaladec.vcxproj  libdaladec.vcxproj.filters
win32/Visual Studio/VS2010/libdaalaenc/: ReadMe.txt  libdaalaenc.vcxproj  libdaalaenc.vcxproj.filters
